--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,15 @@
   <groupId>compiler</groupId>
   <artifactId>compiler</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>pom</packaging>
+
+  <modules>
+    <module>compiler-core</module>
+  </modules>
+
   <build>
     <sourceDirectory>src</sourceDirectory>
+
     <resources>
       <resource>
         <directory>src</directory>
@@ -13,6 +20,7 @@
         </excludes>
       </resource>
     </resources>
+
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -23,16 +31,13 @@
       </plugin>
     </plugins>
   </build>
+
   <dependencies>
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>1.18.32</version>
     </dependency>
-    <dependency>
-      <groupId>org.antlr</groupId>
-      <artifactId>antlr4-runtime</artifactId>
-      <version>4.13.2</version>
-    </dependency>
   </dependencies>
+
 </project>
