--- a/compiler-api/pom.xml
+++ b/compiler-api/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>3.3.2</version>
         </dependency>
+        <dependency>
+            <groupId>compiler</groupId>
+            <artifactId>compiler-core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
