updates on the working mechanism for generating target

--- a/compiler-core/pom.xml
+++ b/compiler-core/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>antlr4-runtime</artifactId>
             <version>4.13.2</version>
         </dependency>
+        <dependency>
+            <groupId>compiler</groupId>
+            <artifactId>shared</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <properties>
