--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <modules>
     <module>compiler-core</module>
     <module>compiler-api</module>
+    <module>shared</module>
   </modules>
 
   <build>
